<resources>
    <string name="app_name">WalkWithMe</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_item_today">Today</string>
    <string name="nav_item_history">History</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_settings">Preferences</string>

    <string name="step_counter_title">%1$d steps</string>
    <string name="no_steps_yet">No steps yet detected</string>

    <string name="pref_name_key" translatable="false">pref_name</string>
    <string name="pref_uid_key" translatable="false">pref_uid</string>
    <string name="pref_photo_key" translatable="false">pref_photo</string>

    <string name="pref_enable_tracking_location_label">Allow tracking location</string>
    <string name="pref_enable_tracking_location_key" translatable="false">enable_location_tracking</string>
    <string name="pref_enable_tracking_location_false">Not enabled</string>
    <string name="pref_enable_tracking_location_true">Enabled</string>
    <string name="pref_enable_tracking_location_default" translatable="false">false</string>

    <string name="pref_enable_sharing_label">Allow share your info</string>
    <string name="pref_enable_sharing_key" translatable="false">enable_sharing</string>
    <string name="pref_enable_sharing_false">Not enabled</string>
    <string name="pref_enable_sharing_true">Enabled</string>
    <string name="pref_enable_sharing_default" translatable="false">false</string>

    <string name="pref_enable_sharing_location_label">Allow sharing location</string>
    <string name="pref_enable_sharing_location_key" translatable="false">enable_sharing_location</string>
    <string name="pref_enable_sharing_location_false">Not enabled</string>
    <string name="pref_enable_sharing_location_true">Enabled</string>
    <string name="pref_enable_sharing_location_default" translatable="false">false</string>

    <string name="no_friends">Login please to see other user\'s statistics</string>

    <string name="friend_photo_transition_name" translatable="false">TN_friend_photo</string>

    <string name="date_today">Today</string>
    <string name="date_yesterday">Yesterday</string>
    <string name="pref_name_title">Your name</string>

    <string name="title_widget_today">Walks Today</string>
    <!-- A11y -->
    <string name="my_history_by_day_main_image_a11y">Motivation image to start walking</string>

    <!-- Permission request -->
    <string name="auth_permission_needed_error">Auth is not available without permission</string>
    <string name="dialog_permission_auth_title">Need permission</string>
    <string name="dialog_permission_auth_message">To have an ability to sync data</string>
    <string name="dialog_permission_auth_positive">OK</string>
</resources>
