<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:title="@string/pref_name_title"
        android:key="@string/pref_name_key"
        android:summary="@string/pref_name_summary"/>

    <CheckBoxPreference
        android:title="@string/pref_enable_tracking_location_label"
        android:key="@string/pref_enable_tracking_location_key"
        android:summaryOff="@string/pref_enable_tracking_location_false"
        android:summaryOn="@string/pref_enable_tracking_location_true"
        android:defaultValue="@string/pref_enable_tracking_location_default" />

    <CheckBoxPreference
        android:title="@string/pref_enable_sharing_label"
        android:key="@string/pref_enable_sharing_key"
        android:summaryOff="@string/pref_enable_sharing_false"
        android:summaryOn="@string/pref_enable_sharing_true"
        android:defaultValue="@string/pref_enable_sharing_default" />

    <CheckBoxPreference
        android:title="@string/pref_enable_sharing_location_label"
        android:key="@string/pref_enable_sharing_location_key"
        android:summaryOff="@string/pref_enable_sharing_location_false"
        android:summaryOn="@string/pref_enable_sharing_location_true"
        android:defaultValue="@string/pref_enable_sharing_location_default" />

</PreferenceScreen>